# quantdev

./: .gitignore  _quarto.yml  about.qmd  catpuccin_mocha.theme  chadracula_evondev.theme  complexity_styles.css  custom-dark.theme  editorial_2025_12.md  index.qmd  newsletter.qmd  nord.scss  nvchad.scss  nvchad.theme  pyproject.toml  resume.qmd  roadmap.qmd  sell_side_quant_critical_path.qmd  styles.css
_site/: about.html  index.html  listings.json  search.json
docs/: CNAME  about.html  about.xml  ads.txt  editorial_2025_12.html  index-listing.json  index.html  index.xml  listings.json  newsletter.html  resume.html  roadmap.html  robots.txt  search.json  sell_side_quant_critical_path.html  sitemap.xml  styles.css
docs/notebooks/: ho_lee.html
notebooks/: ho_lee.ipynb
posts/SFINAE/: index.qmd
posts/aad/: index.qmd  index.quarto_ipynb_1  index.quarto_ipynb_10  index.quarto_ipynb_11  index.quarto_ipynb_12  index.quarto_ipynb_13  index.quarto_ipynb_14  index.quarto_ipynb_2  index.quarto_ipynb_3  index.quarto_ipynb_4  index.quarto_ipynb_5  index.quarto_ipynb_6  index.quarto_ipynb_7  index.quarto_ipynb_8  index.quarto_ipynb_9
posts/atomic-operations/: index.qmd
posts/auto_type_deduction_rules/: index.qmd
posts/backpropogation/: index.ipynb  index.qmd  index.quarto_ipynb_1  index.quarto_ipynb_10  index.quarto_ipynb_11  index.quarto_ipynb_12  index.quarto_ipynb_13  index.quarto_ipynb_14  index.quarto_ipynb_2  index.quarto_ipynb_3  index.quarto_ipynb_4  index.quarto_ipynb_5  index.quarto_ipynb_6  index.quarto_ipynb_7  index.quarto_ipynb_8  index.quarto_ipynb_9
(+688 files in other folders)
