[tool.poetry]
name = "quasar-chunawala-github-io"
version = "0.1.0"
description = ""
authors = ["quasar-chunawala <quasar.chunawala@gmail.com>"]
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.12"

pandas = "^2.2.2"
pandas-stubs = "^2.2.2.240807"
psutil = "^6.0.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.15.2"
jupyter = "^1.0.0"
pre-commit = "^3.8.0"
pyright = "^1.1.374"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"